--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,23 @@
-asgiref==3.6.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-cryptography==39.0.0
-defusedxml==0.7.1
-Django==4.0
-django-allauth==0.52.0
-django-ckeditor==6.5.1
-django-js-asset==2.0.0
+asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==3.0.7
+django-allauth==0.42.0
+django-ckeditor==5.9.0
+django-js-asset==1.2.2
 django-multiselectfield==0.1.12
-gunicorn==20.1.0
-idna==3.4
-oauthlib==3.2.2
-Pillow==9.4.0
-psycopg2==2.8.6
-psycopg2-binary==2.9.5
-pycparser==2.21
-PyJWT==2.6.0
+gunicorn==20.0.4
+idna==2.10
+oauthlib==3.1.0
+Pillow==7.1.2
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 python3-openid==3.2.0
-pytz==2022.7
-requests==2.28.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.3
-tzdata==2022.7
-urllib3==1.26.14
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+sqlparse==0.3.1
+urllib3==1.25.9
+whitenoise==5.1.0
